--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,7 +1,33 @@
 {
   "home": {
-    "switch-language": "switch&nbsp;to&nbsp;english&nbsp;🇺🇸",
-    "web-developer": "веб-разработчик",
-    "message-me": "обратная&nbsp;связь&nbsp;💌"
+    "web-developer": "веб-разработчик"
+  },
+  "form": {
+    "name": {
+      "placeholder": "имя",
+      "letters-only": "имя может содержать только буквы",
+      "too-short": "введённое имя слишком короткое",
+      "too-long": "введённое имя слишком длинное"
+    },
+    "email": {
+      "placeholder": "email",
+      "invalid": "невалидный email адрес"
+    },
+    "message": {
+      "placeholder": "сообщение",
+      "disallowed-chars": "введённое сообщение содержит запрещённые символы",
+      "too-short": "введённое сообщение слишком короткое (минимум: 100 знаков)",
+      "too-long": "введённое сообщение слишком длинное (максимум: 10000 знаков)"
+    },
+    "submit": "отправить"
+  },
+  "feedback": {
+    "heading": "обратная связь",
+    "no-content": "в данный момент сайт находится на стадии наполнения контентом, но, несмотря на это, вы можете связаться со мной"
+  },
+  "footer": {
+    "heading": "на этом всё 🙃",
+    "this-was": "с вами был <span class=\"text-white\">roamiiing</span>, спасибо за внимание",
+    "copyright": "Виталий Лёвкин &#169; 2021"
   }
 }
