Validation with yup

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,18 +6,20 @@
     "name": {
       "placeholder": "name",
       "letters-only": "make sure your name contains only letters",
-      "too-short": "provided name is too short",
-      "too-long": "provided name is too long"
+      "too-long": "provided name is too long (max: {max} characters)",
+      "required": "name is required"
     },
     "email": {
       "placeholder": "email",
-      "invalid": "invalid email"
+      "invalid": "invalid email",
+      "required": "email is required"
     },
     "message": {
       "placeholder": "message",
       "disallowed-chars": "provided message contains disallowed characters",
-      "too-short": "provided message is too short (min: 100 characters)",
-      "too-long": "provided message is too long (max: 10000 characters)"
+      "too-short": "provided message is too short (min: {min} characters)",
+      "too-long": "provided message is too long (max: {max} characters)",
+      "required": "message is required"
     },
     "submit": "submit"
   },
