--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -6,18 +6,20 @@
     "name": {
       "placeholder": "имя",
       "letters-only": "имя может содержать только буквы",
-      "too-short": "введённое имя слишком короткое",
-      "too-long": "введённое имя слишком длинное"
+      "too-long": "введённое имя слишком длинное (max: {max} characters)",
+      "required": "имя обязательно"
     },
     "email": {
       "placeholder": "email",
-      "invalid": "невалидный email адрес"
+      "invalid": "невалидный email",
+      "required": "email обязателен"
     },
     "message": {
-      "placeholder": "сообщение",
+      "placeholder": "message",
       "disallowed-chars": "введённое сообщение содержит запрещённые символы",
-      "too-short": "введённое сообщение слишком короткое (минимум: 100 знаков)",
-      "too-long": "введённое сообщение слишком длинное (максимум: 10000 знаков)"
+      "too-short": "введённое сообщение слишком короткое (минимум {min} знаков)",
+      "too-long": "введённое сообщение слишком длинное (максимум {max} знаков)",
+      "required": "сообщение обязательно"
     },
     "submit": "отправить"
   },
