Add feedback form logic

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -15,13 +15,21 @@
       "required": "email обязателен"
     },
     "message": {
-      "placeholder": "message",
+      "placeholder": "сообщение",
       "disallowed-chars": "введённое сообщение содержит запрещённые символы",
       "too-short": "введённое сообщение слишком короткое (минимум {min} знаков)",
       "too-long": "введённое сообщение слишком длинное (максимум {max} знаков)",
       "required": "сообщение обязательно"
     },
-    "submit": "отправить"
+    "errors": {
+      "403": "ошибка валидации данных",
+      "429": "слишком много запросов. попробуйте позже",
+      "500": "внутренняя ошибка сервера",
+      "unknown": "неизвестная ошибка"
+    },
+    "submit": "отправить",
+    "sent": "успешно отправлено",
+    "answer-soon": "я постараюсь ответить как можно скорее"
   },
   "feedback": {
     "heading": "обратная связь",
