--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,15 @@
       "too-long": "provided message is too long (max: {max} characters)",
       "required": "message is required"
     },
-    "submit": "submit"
+    "errors": {
+      "403": "data validation error",
+      "429": "too many requests. try again later",
+      "500": "internal server error",
+      "unknown": "unknown error"
+    },
+    "submit": "submit",
+    "sent": "successfully sent",
+    "answer-soon": "i'll answer as soon as possible"
   },
   "feedback": {
     "heading": "feedback",
